2009-12-16  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (vector=): Modifed to allow lists.

	* matrix.lisp (matrix): Changed precision to double-float.

	* vector.lisp (vector): Changed precision to double-float.

	* vector-operations.lisp (angle-between): Increased precision in
	this function to use double-floats. Now the angle between 90
	degree vectors is reported as exactly 90 degrees.

2009-12-15  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (norm): Added a version of NORM to operate on lists.

	* tests.lisp (test-nonzero): A test for methods to easily signal a
	condition when its argument has a zero norm.

	* conditions.lisp (zero-norm-error): Added a condition for
	singaling when a vector argument is zero.

	* vector-operations.lisp (angle-between): Added a function to
	return the angle between two vectors.

2009-11-04  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (to-vector): Speed up TO-VECTOR by falling through
	if the asked for dimension is the same as that of the given
	object.

	* matrix.lisp (matrix): Updated the matrix to not store row and
	column information separately. Added separate MATRIX-ROWS and
	MATRIX-COLS methods to return these values.

	* vector.lisp (vector): Added an :initarg and :type for the vector
	DATA slot.

	* matrix.lisp (make-load-form): Created a method for serialising
	matrix object.

	* vector.lisp (vector): Added a documentation string.
	(make-load-form): Created a method for serialising vector objects.

2009-09-11  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (elt): Returns the element of a list, as though it
	were an array.

2009-09-10  Rudy Neeser  <rudy.neeser@gmail.com>

	* interpolate.lisp (between): Added a method to calculate the
	point between two vectors.
	(linear-interpolation): Modified so that it accepts lists as
	arguments as well.

	* vector.lisp (to-vector): Added a key to specify the dimension of
	the vector to transform the data to.
